--- a/doc/上位机程序设计和协议.md
+++ b/doc/上位机程序设计和协议.md
@@ -59,9 +59,9 @@
 
 #### 4. 上位机发送命令、从机返回数据的典型过程
 
-上位机发送`␅(0x05)`，从机收到后进入命令识别模式，根据命令格式识别完成后发送有效标志`␆(0x06)`或无效标志`␕(0x15)`。回复`␕`时下一个比特发送错误代码，回复`␆`不需要发送。
+上位机发送`␅(0x05)`，从机收到后进入命令识别模式，根据命令格式识别完成后发送有效标志`␆(0x06)`或无效标志`␕(0x15)`。回复`␕`时下一个比特发送错误代码，回复`␆`不需要发送。参考图中“slave (handshake fail)”。
 
-如果要回复二进制数据，则在回复`␆`后先发`␁(0x01)`加2字节`uint16`表示从机将要发送的字节数量减一（不包括控制符）；然后发送`␂(0x02)`；再发送要发送的所有字节；最后以`␃(0x03)`结尾，以验证是否错位。如果上位机接收到的控制位与约定不符，则认为从机发回的数据有错误。
+如果要回复二进制数据，则在回复`␆`后先发`␁(0x01)`，之后按照相应命令的规定发送参数，例如2字节`uint16`表示从机将要发送的字节数量减一（不包括控制符）；然后发送`␂(0x02)`；再发送要发送的所有字节；最后以`␃(0x03)`结尾，以验证是否错位。如果上位机接收到的控制位与约定不符，则认为从机发回的数据有错误。参考图中“slave (success)”。
 
 `uint16`最多表示65536个字节需要传输。是否支持更长的字节数有待考虑。
 
@@ -82,13 +82,39 @@
 
 2. 改用`字节数量减一`字段而不是`字节数量`字段，是因为65536无法用2个字节表示。这意味着发送100个字节的数据，传输的`字节数量减一`字段为99；发送1个字节则`字节数量减一`为0（类似于AMBA总线的思路）
 
-3. 
+#### 5. 上位机发送命令、从机接收数据并相应的典型过程
 
-#### 5. 忙判定的技巧
+上位机发送`␅(0x05)`，从机收到后进入命令识别模式，根据命令格式识别完成后发送有效标志`␆(0x06)`或无效标志`␕(0x15)`。回复`␕`时下一个比特发送错误代码，回复`␆`不需要发送。参考图中“slave (handshake fail)”。
+
+如果从机要接受二进制数据，则回复`␆`。上位机收到`␆`后先发`␁(0x01)`，之后按照相应命令的规定发送参数，例如2字节`uint16`表示从机将要发送的字节数量减一（不包括控制符）；然后发送`␂(0x02)`；再发送要发送的所有字节；最后以`␃(0x03)`结尾，以便从机验证是否错位。参考图中“slave (success)”。
+
+`uint16`最多表示65536个字节需要传输。是否支持更长的字节数有待考虑。
+
+若无说明，则默认小端顺序传输。
+
+##### 注意：
+
+1. 上位机发送`␅`后，在从机回复`␆`或`␕`前，应当谨慎考虑发送下一个`␅`
+
+    目前的实现：
+
+    - 命令暂存在缓冲中，待执行完成后再读取新的指令
+    - 数据暂存在缓冲中，若不及时读走可能会丢数据
+    - 如果上一次命令未执行完成，则这个时候发送`␅`会回复`␕`+`0x11`（`HC_ErrCode_Busy`），完成握手并报错，但是什么也不执行
+
+2. 改用`字节数量减一`字段而不是`字节数量`字段，是因为65536无法用2个字节表示。这意味着发送100个字节的数据，传输的`字节数量减一`字段为99；发送1个字节则`字节数量减一`为0（类似于AMBA总线的思路）
+
+3. 本协议从机不会回复，必须要主机主动询问是否有错，为此对于特定命令，从机需要配套增加对应的命令回复（类似“上位机发送命令、从机返回数据”）
+
+##### 参考时序：
+
+![上位机发送命令、从机返回数据的典型过程](上位机发送命令、从机接收数据.svg)
+
+#### 6. 忙判定的技巧
 
 发送`␅`+`0x01`（`NOP`），若回复`␆`则空闲，若回复`␕`+`0x11`则忙。
 
-#### 6. 采样开始停止控制
+#### 7. 采样开始停止控制
 
 开始采样：cmd=`0x10`
 
@@ -97,19 +123,6 @@
 无参数
 
 开始采样后，会进入采样模式，在停止采样前不能切换到其他模式。
-
-#### 7. 导出Flash数据
-
-先发送`␅`+`0x20`进入储存器操作模式，无参数，从机返回状态标志。
-
-切换块（64KB）：默认块号是0，发送`␅`+`0x21`、块号（2B），从机返回状态标志。
-==注意这里是块，之前的文档写成扇区（4KB）了==
-
-输出一个块：发送`␅`+`0x22`，从机返回状态标志、数据长度减一（2B）、`␂`、数据（典型64KB）、`␃`。
-
-发送`␅`+`␛ (0x1B)`退出导出数据模式，从机返回状态标志。
-
-注意：储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
 
 #### 8. Flash擦除
 
@@ -120,6 +133,34 @@
 擦除一个块：发送`␅`+`0x23`，从机返回状态标志。
 
 全片擦除：发送`␅`+`0x2F`，从机返回状态标志。
+
+#### 9. 导出Flash数据
+
+先发送`␅`+`0x20`进入储存器操作模式，无参数，从机返回状态标志。
+
+切换块（64KB）：默认块号是0，发送`␅`+`0x21`、块号（2B），从机返回状态标志。
+
+输出一个块：发送`␅`+`0x22`，从机返回状态标志、`␁`、数据长度减一（2B）、`␂`、数据（典型64KB）、`␃`。
+
+发送`␅`+`␛ (0x1B)`退出导出数据模式，从机返回状态标志。
+
+注意：储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
+
+#### 10. 向Flash写入数据
+
+先发送`␅`+`0x20`进入储存器操作模式，无参数，从机返回状态标志。
+
+查询Flash是否忙：发送`␅`+`0x29`，从机返回状态标志、`␂`、状态代码（`0x00`空闲、`0x11`忙）、`␃`。
+
+发送写指令：发送`␅`+`0x2a`，等待从机返回状态标志，若返回`␕`则停止；若返回`␆`，则发送`␁`、地址（4B）、数据长度减一（2B）、`␂`、数据（典型64KB）、`␃`。
+
+查询写入是否成功：发送`␅`+`0x28`，从机返回状态标志、`␂`、状态代码（`0x00`成功、`0x13`协议错误、……）、`␃`。
+
+发送`␅`+`␛ (0x1B)`退出导出数据模式，从机返回状态标志。
+
+注意：储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
+
+注意：==由于缓存有限，最大数据长度可能不得不远小于64KB==
 
 ### 四、从机的通信握手状态机
 
