修正文档中的设计错误。

--- a/doc/上位机程序设计和协议.md
+++ b/doc/上位机程序设计和协议.md
@@ -152,7 +152,7 @@
 
 查询Flash是否忙：发送`␅`+`0x29`，从机返回状态标志、`␂`、状态代码（`0x00`空闲、`0x11`忙）、`␃`。
 
-发送写指令：发送`␅`+`0x2a`，等待从机返回状态标志，若返回`␕`则停止；若返回`␆`，则发送`␁`、地址（4B）、数据长度减一（2B）、`␂`、数据（典型64KB）、`␃`。
+发送写指令：发送`␅`+`0x2a`、地址（4B）、数据长度减一（2B），等待从机返回状态标志，若返回`␕`则停止；若返回`␆`，则发送`␂`、数据（典型4KB）、`␃`。
 
 查询写入是否成功：发送`␅`+`0x28`，从机返回状态标志、`␂`、状态代码（`0x00`成功、`0x13`协议错误、……）、`␃`。
 
@@ -160,7 +160,7 @@
 
 注意：储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
 
-注意：==由于缓存有限，最大数据长度可能不得不远小于64KB==
+注意：由于缓存有限，最大数据长度暂定为缓存大小4KB
 
 ### 四、从机的通信握手状态机
 
