--- a/doc/上位机程序设计和协议.md
+++ b/doc/上位机程序设计和协议.md
@@ -1,5 +1,7 @@
 # 上位机程序设计和协议
 
+*注：位于Oil/AutoPerforation/Submodules/HostCommunication-x86>中doc目录下的文档是最新的版本。*
+
 ### 一、程序组成
 
 上位机程序使用Python开发，分三个模块。
@@ -12,26 +14,18 @@
 
 1. 复位
     硬件置位RTS
-
 2. 控制
     包括采样开始、采样停止等
-
 3. 显示客户机传回的内容
-
 4. 导出数据
     包括导出某页、导出整个Flash等
-
-5. 擦除Flash
+5. 擦除闪存
     包括块擦除和全片擦除
-
-    ------
-
-6. 导入射孔位置信息
+6. 导入配置信息
     写入Flash
-
 7. 待定
 
-
+*相较于文档，目前代码功能有所增加，待更新。*
 
 ### 三、串口通信协议
 
