修改文档，未完成。

--- a/doc/上位机程序设计和协议.md
+++ b/doc/上位机程序设计和协议.md
@@ -4,109 +4,259 @@
 
 ### 一、程序组成
 
-上位机程序使用Python开发，分三个模块。
+上位机通信程序分为主机和从机两部分。其中：
 
-- 功能模块：具体的通信等功能的函数
-- 命令行模块：通过命令行控制业务模块的程序
-- 图形界面模块：与命令行功能相同，但是变成图形界面
+- 主机：Python编写，位于Oil/AutoPerforation/Oil_AutoPerforation_Host2>
+- 从机：C编写，原型位于Oil/AutoPerforation/Submodules/HostCommunication-x86>，部署于Oil/AutoPerforation/STM32H7_SignalCollectionPlus>
 
-### 二、包含功能
+### 二、串口通信协议
 
-1. 复位
-    硬件置位RTS
-2. 控制
-    包括采样开始、采样停止等
-3. 显示客户机传回的内容
-4. 导出数据
-    包括导出某页、导出整个Flash等
-5. 擦除闪存
-    包括块擦除和全片擦除
-6. 导入配置信息
-    写入Flash
-7. 待定
-
-*相较于文档，目前代码功能有所增加，待更新。*
-
-### 三、串口通信协议
-
-上位机和单片机（从机）程序中各有一个平台无关的软件状态机，由串口接收到的字节驱动转移。
+上位机（主机）和单片机（从机）程序中各有一个平台无关的软件状态机，由串口接收到的字节驱动转移。
 
 状态机中有两个状态量，一个记录握手协议的状态（简称状态），一个记录当前的功能模式（简称模式）。模式的引入是为了检查发送的指令是否符合当前的状态，防止传入错误指令。详见下文。
 
-注：方框中的符号为ASCII控制符，详情见相关文档^[1]^。
+注：方框中的符号为ASCII控制符，详情见相关文档[^1]。
 
-#### 1. 各常数定义
+#### ㈠ 各常数定义
 
 暂时未整理在这里，请参阅代码仓库`BUSINESS\HostCommunication\`目录下的`HostCommunication.h`、`HostCommunicationCommandCode.h`、`HostCommunicationErrorCode.h`。
 
-#### 2. 从机状态机复位
+#### ㈡ 典型时序模型
+
+所有的指令都遵从共同的时序规定：
+
+1. 指令以`␅(0x05)`开头，指令代码1个字节。指令有效时，从机回复`␆`；否则，从机回复`␕`以及1个字节的错误码；
+2. 无论是主机还是从机，数据块参数（可选）以`␁(0x01)`开头，数据块内容以`␂(0x02)`开头，`␃(0x03)`结尾；
+   这三个控制符是为了验证字节流有无错位；如果主机接收到的控制位字符与约定不符，则认为从机发回的数据有错误；
+3. 若无说明，则默认小端顺序传输超过1字节的数据。
+
+所有的指令时序可以按照如下方法分类：
+
+1. 按照参数可分为
+  - 无参数
+  - 有参数
+2. 按照是否有数据块可分为
+  - 无数据块
+  - 主机发送数据块
+  - 从机发送数据块
+3. 按照数据块长度可分为
+  - 定长数据块（包括无数据块）
+  - 变长数据块
+
+下面对部分典型时序进行举例，其余时序可以根据相同的原则推导得出：
+
+##### 1. 无参数，无数据块
+
+```wavedrom
+{
+	signal: [
+		{ name: "time", wave: "xPP||PP", },
+		{ name: "master", wave: "1371|..", data: ["ENQ", "cmd",] },
+		{ name: "(handshake success) slave", wave: "1..|41.", data: ["ACK",] },
+		{ name: "(handshake fail) slave", wave: "1..|491", data: ["NAK", "err",] },
+	]
+}
+```
+
+##### 2. 定长参数，主机发送无参数数据块
+
+```wavedrom
+{
+	signal: [
+		{ name: "time", wave: "xPPP||PPP|PPP|PP", },
+		{ name: "master", wave: "1375|1...|32.|31", data: ["ENQ", "cmd", "args      ", "STX", "data      ", "ETX",] },
+		{ name: "(success) slave", wave: "1....|41.|......", data: ["ACK",] },
+		{ name: "(fail) slave", wave: "1....|491|......", data: ["NAK", "err",] },
+	]
+}
+```
+
+##### 3. 无参数，从机发送带参数数据块（变长）
+
+```wavedrom
+{
+	signal: [
+		{ name: "time", wave: "xPPP|PP|PP|PPP|PP", },
+		{ name: "master", wave: "1371|............", data: ["ENQ", "cmd",] },
+		{ name: "(success) slave", wave: "1...|41|38|32.|31", data: ["ACK", "SOH", "args      ", "STX", "data      ", "ETX",] },
+		{ name: "(fail) slave", wave: "1...|491|........", data: ["NAK", "err",] },
+	]
+}
+```
+
+
+
+#### ㈢ 指令及其时序
+
+##### 1. 空指令
+
+| 命令字   | HC_CMD_NOP（`0x01`） |
+| -------- | -------------------- |
+| 命令参数 | 无                   |
+| 数据块   | 无                   |
+
+```wavedrom
+{
+	signal: [
+		{ name: "time", wave: "xPPP|PPP", },
+		{ name: "master", wave: "1371|...", data: ["ENQ", "0x01",] },
+		{ name: "(handshake success) slave", wave: "1...|41.", data: ["ACK",] },
+		{ name: "(handshake fail) slave", wave: "1...|491", data: ["NAK", "err",] },
+	]
+}
+```
+
+**技巧：**
+
+可以使用本指令判定从机的上位机通信模块是否正忙。若回复`␆`则空闲，若回复`␕`+`0x11`则忙。
+
+##### 2. 无效指令
+
+| 命令字   | HC_CMD_INVALID0（`0x00`）<br />HC_CMD_INVALID1（`0xFF`） |
+| -------- | -------------------------------------------------------- |
+| 命令参数 | 无                                                       |
+| 数据块   | 无                                                       |
+
+```wavedrom
+{
+	signal: [
+		{ name: "time", wave: "xPPP|PPP", },
+		{ name: "master", wave: "1371|...", data: ["ENQ", "cmd",] },
+		{ name: "(handshake fail) slave", wave: "1...|491", data: ["NAK", "0xA1",] },
+	]
+}
+```
+
+**注意：**
+
+该命令永远返回错误。
+
+##### 3. 功能状态回到就绪
+
+##### 4. 开始采样、停止采样
+
+##### 5. 操作Flash模式
+
+##### 6. 指定64K块编号、指定4K扇区编号
+
+##### 7. 导出当前64K块
+
+| 命令字     | HC_CMD_Output64kBlock（`0x22`）  |
+| ---------- | -------------------------------- |
+| 命令参数   | 无                               |
+| 数据块     | 从机发送                         |
+| 数据块参数 | `uint16`：数据块`data`的长度减一 |
+| 数据块内容 | 闪存64K块的内容                  |
+
+```wavedrom
+{
+	signal: [
+		{ name: "time", wave: "xPPP|PP|PPPPPP|PP", },
+		{ name: "master", wave: "1371|............", data: ["ENQ", "0x22", ] },
+		{ name: "(success) slave", wave: "1...|41|38.32.|31", data: ["ACK", "SOH", "len-1", "STX", "data      ", "ETX",] },
+		{ name: "(fail) slave", wave: "1...|491|........", data: ["NAK", "err",] },
+	]
+}
+```
+
+**说明：**
+
+1. 本指令最大允许传输长度为65536，即；使用`字节数量减一`字段而不是`字节数量`字段，是因为65536无法用2个字节表示。这意味着发送100个字节的数据，传输的`字节数量减一`字段为99；发送1个字节则`字节数量减一`为0（类似于AMBA总线的思路）
+
+##### 8. 擦除当前64K块、擦除当前4K扇区
+
+##### 9. 询问闪存上次写入是否出错
+
+状态代码（`0x00`成功、`0x13`协议错误、……）
+
+##### 10. 询问闪存是否忙
+
+##### 11. 在闪存指定地址写入数据
+
+| 命令字     | HC_CMD_WriteFlashAtAddr（`0x2A`）                            |
+| ---------- | ------------------------------------------------------------ |
+| 命令参数   | `uint32`：闪存中的目标地址<br />`uint16`：数据块`data`的长度减一 |
+| 数据块     | 主机发送                                                     |
+| 数据块参数 | 无                                                           |
+| 数据块内容 | 闪存64K块的内容                                              |
+
+```wavedrom
+{
+	signal: [
+		{ name: "time", wave: "xPPPPPPPPP|PP|PPP|PPP", },
+		{ name: "master", wave: "1375...5.1|...|32.|31", data: ["ENQ", "0x2A", "addr", "len-1", "STX", "data      ", "ETX",] },
+		{ name: "(success) slave", wave: "1.........|41.|......", data: ["ACK",] },
+		{ name: "(fail) slave", wave: "1.........|491|......", data: ["NAK", "err",] },
+	]
+}
+```
+
+**注意：**
+
+本指令从机不会回复写入是否成功，必须由主机再次主动询问。
+
+##### 12. 询问Flash型号ID
+
+| 命令字     | HC_CMD_AskFlashDeviceID（`0x2E`） |
+| ---------- | --------------------------------- |
+| 命令参数   | 无                                |
+| 数据块     | 从机发送                          |
+| 数据块参数 | 无                                |
+| 数据块内容 | `uint16`：当前闪存颗粒的器件型号  |
+
+
+```wavedrom
+{
+	signal: [
+		{ name: "time", wave: "xPPP|PP|PPP|PP", },
+		{ name: "master", wave: "1371|.........", data: ["ENQ", "0x2E", ] },
+		{ name: "(success) slave", wave: "1...|41|32.|31", data: ["ACK", "STX", "deviceID      ", "ETX",] },
+		{ name: "(fail) slave", wave: "1...|491|.....", data: ["NAK", "err",] },
+	]
+}
+```
+
+<font color='red'>注意：目前程序内的时序与本规定不符，有待修改</font>
+
+##### 13. 全片擦除
+
+##### 14. 设置RTC时间
+
+#### ㈢ 功能的实现
+
+##### 1. 从机状态机复位
 
 从机状态机在任何状态，上位机连续发送8次`␘(0x18)`，从机状态机即复位到就绪状态。
 
 串口最后一个字节接收到后一段时间（例如1秒）内没有新的字节送入，即视为传输结束，从状态机复位。如果在等待数据传输，则认为传输错误。并且发送状态机复位码使从机状态机复位。
 
-#### 3. 从机发送文本
+##### 2. 从机发送文本
 
-~~从机发送`␂(0x02)`，上位机进入接收文本状态，直到接收到`␃(0x03)`为止，中间的所有字节全部视为文本。~~
+就绪状态，默认把从机输出都作为文本。
 
-就绪状态，默认把输出都作为文本。
+##### 10. 向闪存写入数据
 
-#### 4. 上位机发送命令、从机返回数据的典型过程
+1. 进入闪存操作模式
+2. 询问闪存是否忙
+3. 在闪存指定地址写入数据
+4. 询问闪存上次写入是否出错
+5. 退出闪存操作模式
 
-上位机发送`␅(0x05)`，从机收到后进入命令识别模式，根据命令格式识别完成后发送有效标志`␆(0x06)`或无效标志`␕(0x15)`。回复`␕`时下一个比特发送错误代码，回复`␆`不需要发送。参考图中“slave (handshake fail)”。
+注意：储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
 
-如果要回复二进制数据，则在回复`␆`后先发`␁(0x01)`，之后按照相应命令的规定发送参数，例如2字节`uint16`表示从机将要发送的字节数量减一（不包括控制符）；然后发送`␂(0x02)`；再发送要发送的所有字节；最后以`␃(0x03)`结尾，以验证是否错位。如果上位机接收到的控制位与约定不符，则认为从机发回的数据有错误。参考图中“slave (success)”。
+注意：由于缓存有限，最大数据长度暂定为缓存大小4KB
 
-`uint16`最多表示65536个字节需要传输。是否支持更长的字节数有待考虑。
-
-若无说明，则默认小端顺序传输。
-
-##### 参考时序：
-
-![上位机发送命令、从机返回数据的典型过程](上位机发送命令、从机返回数据.svg)
-
-##### 注意：
+#### ㈣ 注意事项
 
 1. 上位机发送`␅`后，在从机回复`␆`或`␕`前，应当谨慎考虑发送下一个`␅`
+2. 目前的实现存在以下特点
+   - 命令暂存在缓冲中，待执行完成后再读取新的指令；
+   - 数据暂存在缓冲中，若不及时读走可能会丢数据；
+   - 如果上一次命令未执行完成，则这个时候发送`␅`会回复`␕`+`0x11`（`HC_ErrCode_Busy`），完成握手并报错，但是什么也不执行；
 
-   目前的实现：
+------
 
-   - 命令暂存在缓冲中，待执行完成后再读取新的指令
-   - 如果上一次命令未执行完成，则这个时候发送`␅`会回复`␕`+`0x11`（`HC_ErrCode_Busy`），完成握手并报错，但是什么也不执行
-
-2. 改用`字节数量减一`字段而不是`字节数量`字段，是因为65536无法用2个字节表示。这意味着发送100个字节的数据，传输的`字节数量减一`字段为99；发送1个字节则`字节数量减一`为0（类似于AMBA总线的思路）
-
-#### 5. 上位机发送命令、从机接收数据并相应的典型过程
-
-上位机发送`␅(0x05)`，从机收到后进入命令识别模式，根据命令格式识别完成后发送有效标志`␆(0x06)`或无效标志`␕(0x15)`。回复`␕`时下一个比特发送错误代码，回复`␆`不需要发送。参考图中“slave (handshake fail)”。
-
-如果从机要接受二进制数据，则回复`␆`。上位机收到`␆`后先发`␁(0x01)`，之后按照相应命令的规定发送参数，例如2字节`uint16`表示从机将要发送的字节数量减一（不包括控制符）；然后发送`␂(0x02)`；再发送要发送的所有字节；最后以`␃(0x03)`结尾，以便从机验证是否错位。参考图中“slave (success)”。
-
-`uint16`最多表示65536个字节需要传输。是否支持更长的字节数有待考虑。
-
-若无说明，则默认小端顺序传输。
-
-##### 注意：
-
-1. 上位机发送`␅`后，在从机回复`␆`或`␕`前，应当谨慎考虑发送下一个`␅`
-
-    目前的实现：
-
-    - 命令暂存在缓冲中，待执行完成后再读取新的指令
-    - 数据暂存在缓冲中，若不及时读走可能会丢数据
-    - 如果上一次命令未执行完成，则这个时候发送`␅`会回复`␕`+`0x11`（`HC_ErrCode_Busy`），完成握手并报错，但是什么也不执行
-
-2. 改用`字节数量减一`字段而不是`字节数量`字段，是因为65536无法用2个字节表示。这意味着发送100个字节的数据，传输的`字节数量减一`字段为99；发送1个字节则`字节数量减一`为0（类似于AMBA总线的思路）
-
-3. 本协议从机不会回复，必须要主机主动询问是否有错，为此对于特定命令，从机需要配套增加对应的命令回复（类似“上位机发送命令、从机返回数据”）
-
-##### 参考时序：
-
-![上位机发送命令、从机返回数据的典型过程](上位机发送命令、从机接收数据.svg)
-
-#### 6. 忙判定的技巧
-
-发送`␅`+`0x01`（`NOP`），若回复`␆`则空闲，若回复`␕`+`0x11`则忙。
+<font color='red'>两条横线之间的内容应当删除。</font>
 
 #### 7. 采样开始停止控制
 
@@ -140,21 +290,7 @@
 
 注意：储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
 
-#### 10. 向Flash写入数据
-
-先发送`␅`+`0x20`进入储存器操作模式，无参数，从机返回状态标志。
-
-查询Flash是否忙：发送`␅`+`0x29`，从机返回状态标志、`␂`、状态代码（`0x00`空闲、`0x11`忙）、`␃`。
-
-发送写指令：发送`␅`+`0x2a`、地址（4B）、数据长度减一（2B），等待从机返回状态标志，若返回`␕`则停止；若返回`␆`，则发送`␂`、数据（典型4KB）、`␃`。
-
-查询写入是否成功：发送`␅`+`0x28`，从机返回状态标志、`␂`、状态代码（`0x00`成功、`0x13`协议错误、……）、`␃`。
-
-发送`␅`+`␛ (0x1B)`退出导出数据模式，从机返回状态标志。
-
-注意：储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
-
-注意：由于缓存有限，最大数据长度暂定为缓存大小4KB
+------
 
 ### 四、从机的通信握手状态机
 
@@ -164,4 +300,4 @@
 
 ### 参考文档
 
-1. [控制字符](https://zh.wikipedia.org/wiki/ASCII#%E6%8E%A7%E5%88%B6%E5%AD%97%E7%AC%A6)；
+[^1]: [控制字符](https://zh.wikipedia.org/wiki/ASCII#%E6%8E%A7%E5%88%B6%E5%AD%97%E7%AC%A6)；
