重新使用SVG以便解决兼容问题；修改一些格式错误。

--- a/doc/上位机程序设计和协议.md
+++ b/doc/上位机程序设计和协议.md
@@ -19,7 +19,7 @@
 
 #### ㈠ 各常数定义
 
-暂时未整理在这里，请参阅代码仓库`BUSINESS\HostCommunication\`目录下的`HostCommunication.h`、`HostCommunicationCommandCode.h`、`HostCommunicationErrorCode.h`。
+暂时未整理在这里，请参阅代码仓库目录下的[`HostCommunication.h`](../HostCommunication.h)、[`HostCommunicationCommandCode.h`](../HostCommunicationCommandCode.h)、[`HostCommunicationErrorCode.h`](../HostCommunicationErrorCode.h)。
 
 #### ㈡ 典型时序模型
 
@@ -33,58 +33,29 @@
 所有的指令时序可以按照如下方法分类：
 
 1. 按照参数可分为
-  - 无参数
-  - 有参数
+   - 无参数
+   - 有参数
 2. 按照是否有数据块可分为
-  - 无数据块
-  - 主机发送数据块
-  - 从机发送数据块
+   - 无数据块
+   - 主机发送数据块
+   - 从机发送数据块
 3. 按照数据块长度可分为
-  - 定长数据块（包括无数据块）
-  - 变长数据块
+   - 定长数据块（包括无数据块）
+   - 变长数据块
 
 下面对部分典型时序进行举例，其余时序可以根据相同的原则推导得出：
 
 ##### 1. 无参数，无数据块
 
-```wavedrom
-{
-	signal: [
-		{ name: "time", wave: "xPP||PP", },
-		{ name: "master", wave: "1371|..", data: ["ENQ", "cmd",] },
-		{ name: "(handshake success) slave", wave: "1..|41.", data: ["ACK",] },
-		{ name: "(handshake fail) slave", wave: "1..|491", data: ["NAK", "err",] },
-	]
-}
-```
+![无参数，无数据块](./image/无参数，无数据块.svg)
 
 ##### 2. 定长参数，主机发送无参数数据块
 
-```wavedrom
-{
-	signal: [
-		{ name: "time", wave: "xPPP||PPP|PPP|PP", },
-		{ name: "master", wave: "1375|1...|32.|31", data: ["ENQ", "cmd", "args      ", "STX", "data      ", "ETX",] },
-		{ name: "(success) slave", wave: "1....|41.|......", data: ["ACK",] },
-		{ name: "(fail) slave", wave: "1....|491|......", data: ["NAK", "err",] },
-	]
-}
-```
+![定长参数，主机发送无参数数据块](./image/定长参数，主机发送无参数数据块.svg)
 
 ##### 3. 无参数，从机发送带参数数据块（变长）
 
-```wavedrom
-{
-	signal: [
-		{ name: "time", wave: "xPPP|PP|PP|PPP|PP", },
-		{ name: "master", wave: "1371|............", data: ["ENQ", "cmd",] },
-		{ name: "(success) slave", wave: "1...|41|38|32.|31", data: ["ACK", "SOH", "args      ", "STX", "data      ", "ETX",] },
-		{ name: "(fail) slave", wave: "1...|491|........", data: ["NAK", "err",] },
-	]
-}
-```
-
-
+![无参数，从机发送带参数数据块](./image/无参数，从机发送带参数数据块.svg)
 
 #### ㈢ 指令及其时序
 
@@ -95,16 +66,7 @@
 | 命令参数 | 无                   |
 | 数据块   | 无                   |
 
-```wavedrom
-{
-	signal: [
-		{ name: "time", wave: "xPPP|PPP", },
-		{ name: "master", wave: "1371|...", data: ["ENQ", "0x01",] },
-		{ name: "(handshake success) slave", wave: "1...|41.", data: ["ACK",] },
-		{ name: "(handshake fail) slave", wave: "1...|491", data: ["NAK", "err",] },
-	]
-}
-```
+![HC_CMD_NOP](./image/HC_CMD_NOP.svg)
 
 **技巧：**
 
@@ -117,15 +79,7 @@
 | 命令参数 | 无                                                       |
 | 数据块   | 无                                                       |
 
-```wavedrom
-{
-	signal: [
-		{ name: "time", wave: "xPPP|PPP", },
-		{ name: "master", wave: "1371|...", data: ["ENQ", "cmd",] },
-		{ name: "(handshake fail) slave", wave: "1...|491", data: ["NAK", "0xA1",] },
-	]
-}
-```
+![HC_CMD_INVALIDx](./image/HC_CMD_INVALIDx.svg)
 
 **注意：**
 
@@ -148,20 +102,11 @@
 | 数据块参数 | `uint16`：数据块`data`的长度减一 |
 | 数据块内容 | 闪存64K块的内容                  |
 
-```wavedrom
-{
-	signal: [
-		{ name: "time", wave: "xPPP|PP|PPPPPP|PP", },
-		{ name: "master", wave: "1371|............", data: ["ENQ", "0x22", ] },
-		{ name: "(success) slave", wave: "1...|41|38.32.|31", data: ["ACK", "SOH", "len-1", "STX", "data      ", "ETX",] },
-		{ name: "(fail) slave", wave: "1...|491|........", data: ["NAK", "err",] },
-	]
-}
-```
+![HC_CMD_Output64kBlock](./image/HC_CMD_Output64kBlock.svg)
 
 **说明：**
 
-1. 本指令最大允许传输长度为65536，即；使用`字节数量减一`字段而不是`字节数量`字段，是因为65536无法用2个字节表示。这意味着发送100个字节的数据，传输的`字节数量减一`字段为99；发送1个字节则`字节数量减一`为0（类似于AMBA总线的思路）
+本指令最大允许传输长度为65536，即`uint16`所能表示的索引范围；使用`字节数量减一`字段而不是`字节数量`字段，是因为65536无法用2个字节表示。这意味着发送100个字节的数据，传输的`字节数量减一`字段为99；发送1个字节则`字节数量减一`为0（类似于AMBA总线的思路）
 
 ##### 8. 擦除当前64K块、擦除当前4K扇区
 
@@ -180,16 +125,7 @@
 | 数据块参数 | 无                                                           |
 | 数据块内容 | 闪存64K块的内容                                              |
 
-```wavedrom
-{
-	signal: [
-		{ name: "time", wave: "xPPPPPPPPP|PP|PPP|PPP", },
-		{ name: "master", wave: "1375...5.1|...|32.|31", data: ["ENQ", "0x2A", "addr", "len-1", "STX", "data      ", "ETX",] },
-		{ name: "(success) slave", wave: "1.........|41.|......", data: ["ACK",] },
-		{ name: "(fail) slave", wave: "1.........|491|......", data: ["NAK", "err",] },
-	]
-}
-```
+![HC_CMD_WriteFlashAtAddr](./image/HC_CMD_WriteFlashAtAddr.svg)
 
 **注意：**
 
@@ -204,17 +140,7 @@
 | 数据块参数 | 无                                |
 | 数据块内容 | `uint16`：当前闪存颗粒的器件型号  |
 
-
-```wavedrom
-{
-	signal: [
-		{ name: "time", wave: "xPPP|PP|PPP|PP", },
-		{ name: "master", wave: "1371|.........", data: ["ENQ", "0x2E", ] },
-		{ name: "(success) slave", wave: "1...|41|32.|31", data: ["ACK", "STX", "deviceID      ", "ETX",] },
-		{ name: "(fail) slave", wave: "1...|491|.....", data: ["NAK", "err",] },
-	]
-}
-```
+![HC_CMD_AskFlashDeviceID](./image/HC_CMD_AskFlashDeviceID.svg)
 
 <font color='red'>注意：目前程序内的时序与本规定不符，有待修改</font>
 
@@ -242,13 +168,14 @@
 4. 询问闪存上次写入是否出错
 5. 退出闪存操作模式
 
-注意：储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
+注意：
 
-注意：由于缓存有限，最大数据长度暂定为缓存大小4KB
+1. 储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
+2. 由于缓存有限，最大数据长度暂定为缓存大小4KB
 
 #### ㈣ 注意事项
 
-1. 上位机发送`␅`后，在从机回复`␆`或`␕`前，应当谨慎考虑发送下一个`␅`
+1. 上位机发送`␅`后，在从机回复`␆`或`␕`前，应当谨慎考虑发送下一个`␅`；
 2. 目前的实现存在以下特点
    - 命令暂存在缓冲中，待执行完成后再读取新的指令；
    - 数据暂存在缓冲中，若不及时读走可能会丢数据；
@@ -294,7 +221,7 @@
 
 ### 四、从机的通信握手状态机
 
-![从机的上位机通信握手状态机](从机的上位机通信握手状态机.svg)
+![从机的上位机通信握手状态机](./image/从机的上位机通信握手状态机.svg)
 
 *本图是从机为实现通信协议的状态机。主机如何实现通信协议与本图无关。*
 
