--- a/doc/上位机程序设计和协议.md
+++ b/doc/上位机程序设计和协议.md
@@ -142,7 +142,7 @@
 
 ![HC_CMD_AskFlashDeviceID](./image/HC_CMD_AskFlashDeviceID.svg)
 
-<font color='red'>注意：目前程序内的时序与本规定不符，有待修改</font>
+<font color='red'>注意：目前程序内的时序与本规定不符，有待修改；另外，`deviceID`最好返回缓存的器件号而不是通过SPI通信读出；</font>
 
 ##### 13. 全片擦除
 
