--- a/doc/上位机程序设计和协议.md
+++ b/doc/上位机程序设计和协议.md
@@ -25,7 +25,7 @@
 
 所有的指令都遵从共同的时序规定：
 
-1. 指令以`␅(0x05)`开头，指令代码1个字节。指令有效时，从机回复`␆`；否则，从机回复`␕`以及1个字节的错误码；
+1. 指令以`␅(0x05)`开头，指令代码1个字节。指令有效时，从机回复`␆(0x06)`；否则，从机回复`␕(0x15)`以及1个字节的错误码；
 2. 无论是主机还是从机，数据块参数（可选）以`␁(0x01)`开头，数据块内容以`␂(0x02)`开头，`␃(0x03)`结尾；
    这三个控制符是为了验证字节流有无错位；如果主机接收到的控制位字符与约定不符，则认为从机发回的数据有错误；
 3. 若无说明，则默认小端顺序传输超过1字节的数据。
@@ -87,39 +87,87 @@
 
 ##### 3. 功能状态回到就绪
 
-##### 4. 开始采样、停止采样
+| 命令字   | HC_CMD_FuncStatusBackToStandBy（`0x1b`） |
+| -------- | ---------------------------------------- |
+| 命令参数 | 无                                       |
+| 数据块   | 无                                       |
 
-##### 5. 操作Flash模式
+![HC_CMD_FuncStatusBackToStandBy](./image/HC_CMD_FuncStatusBackToStandBy.svg)
 
-##### 6. 指定64K块编号、指定4K扇区编号
+##### 4. 开始／停止采样
 
-##### 7. 导出当前64K块
+| 命令字   | HC_CMD_StartSample（`0x10`）<br />HC_CMD_StopSample（`0x11`） |
+| -------- | ------------------------------------------------------------ |
+| 功能状态 | 必须是`HC_FUNCTION_STATUS_STANDBY`或`HC_FUNCTION_STATUS_SAMPLING` |
+| 命令参数 | 无                                                           |
+| 数据块   | 无                                                           |
 
-| 命令字     | HC_CMD_Output64kBlock（`0x22`）  |
-| ---------- | -------------------------------- |
-| 命令参数   | 无                               |
-| 数据块     | 从机发送                         |
-| 数据块参数 | `uint16`：数据块`data`的长度减一 |
-| 数据块内容 | 闪存64K块的内容                  |
+![HC_CMD_xSample](./image/HC_CMD_xSample.svg)
+
+##### 5. 储存器操作模式
+
+| 命令字   | HC_CMD_SwitchOperateStorageMode（`0x20`）                    |
+| -------- | ------------------------------------------------------------ |
+| 功能状态 | 必须是`HC_FUNCTION_STATUS_STANDBY`或`HC_FUNCTION_STATUS_OPERATE_STORAGE` |
+| 命令参数 | 无                                                           |
+| 数据块   | 无                                                           |
+
+![HC_CMD_SwitchOperateStorageMode](./image/HC_CMD_SwitchOperateStorageMode.svg)
+
+##### 6. 指定64K块编号／指定4K扇区编号
+
+| 命令字   | HC_CMD_Specify64kBlock（`0x21`）<br />HC_CMD_Specify4kSector（`0x24`） |
+| -------- | ------------------------------------------------------------ |
+| 功能状态 | 必须是`HC_FUNCTION_STATUS_OPERATE_STORAGE`                   |
+| 命令参数 | `uint16`：块或扇区的标号                                     |
+| 数据块   | 无                                                           |
+
+![HC_CMD_SpecifyxkBlock](./image/HC_CMD_SpecifyBlockSector.svg)
+
+##### 7. 导出当前64K块／*导出当前4K扇区（预留）*
+
+| 命令字     | HC_CMD_Output64kBlock（`0x22`）<br />HC_CMD_Output4kSector（`0x25`） |
+| ---------- | ------------------------------------------------------------ |
+| 功能状态   | 必须是`HC_FUNCTION_STATUS_OPERATE_STORAGE`                   |
+| 命令参数   | 无                                                           |
+| 数据块     | 从机发送                                                     |
+| 数据块参数 | `uint16`：数据块`data`的长度减一                             |
+| 数据块内容 | 闪存被导出的内容                                             |
 
 ![HC_CMD_Output64kBlock](./image/HC_CMD_Output64kBlock.svg)
 
 **说明：**
 
-本指令最大允许传输长度为65536，即`uint16`所能表示的索引范围；使用`字节数量减一`字段而不是`字节数量`字段，是因为65536无法用2个字节表示。这意味着发送100个字节的数据，传输的`字节数量减一`字段为99；发送1个字节则`字节数量减一`为0（类似于AMBA总线的思路）
+1. 本指令最大允许传输长度为65536，即`uint16`所能表示的索引范围；使用`字节数量减一`字段而不是`字节数量`字段，是因为65536无法用2个字节表示。这意味着发送100个字节的数据，传输的`字节数量减一`字段为99；发送1个字节则`字节数量减一`为0（类似于AMBA总线的思路）
+2. 导出当前4K扇区的功能预留但尚未实现
 
-##### 8. 擦除当前64K块、擦除当前4K扇区
+##### 8. 擦除当前64K块／擦除当前4K扇区／全片擦除
 
-##### 9. 询问闪存上次写入是否出错
+| 命令字   | HC_CMD_Erase64kBlock（`0x23`）<br />HC_CMD_Erase4kSector（`0x26`）<br />HC_CMD_EraseFullChip（`0x2F`） |
+| -------- | ------------------------------------------------------------ |
+| 功能状态 | 必须是`HC_FUNCTION_STATUS_OPERATE_STORAGE`                   |
+| 命令参数 | 无                                                           |
+| 数据块   | 无                                                           |
 
-状态代码（`0x00`成功、`0x13`协议错误、……）
+![HC_CMD_ErasexkBlock](./image/HC_CMD_Erasex.svg)
 
-##### 10. 询问闪存是否忙
+##### 9. 询问闪存上次写入是否出错／询问闪存是否忙
 
-##### 11. 在闪存指定地址写入数据
+| 命令字     | HC_CMD_AskLastWriteResult（`0x28`）<br />HC_CMD_AskFlashStatus（`0x29`） |
+| ---------- | ------------------------------------------------------------ |
+| 功能状态   | 必须是`HC_FUNCTION_STATUS_OPERATE_STORAGE`                   |
+| 命令参数   | 无                                                           |
+| 数据块     | 从机发送                                                     |
+| 数据块参数 | 无                                                           |
+| 数据块内容 | `uint8`：状态代码（见[`HostCommunicationErrorCode.h`](../HostCommunicationErrorCode.h)） |
+
+![HC_CMD_AskLastWriteResult_FlashStatus](./image/HC_CMD_AskLastWriteResult_FlashStatus.svg)
+
+##### 10. 在闪存指定地址写入数据
 
 | 命令字     | HC_CMD_WriteFlashAtAddr（`0x2A`）                            |
 | ---------- | ------------------------------------------------------------ |
+| 功能状态   | 必须是`HC_FUNCTION_STATUS_OPERATE_STORAGE`                   |
 | 命令参数   | `uint32`：闪存中的目标地址<br />`uint16`：数据块`data`的长度减一 |
 | 数据块     | 主机发送                                                     |
 | 数据块参数 | 无                                                           |
@@ -131,24 +179,30 @@
 
 本指令从机不会回复写入是否成功，必须由主机再次主动询问。
 
-##### 12. 询问Flash型号ID
+##### 11. 询问闪存型号
 
-| 命令字     | HC_CMD_AskFlashDeviceID（`0x2E`） |
-| ---------- | --------------------------------- |
-| 命令参数   | 无                                |
-| 数据块     | 从机发送                          |
-| 数据块参数 | 无                                |
-| 数据块内容 | `uint16`：当前闪存颗粒的器件型号  |
+| 命令字     | HC_CMD_AskFlashDeviceID（`0x2E`）          |
+| ---------- | ------------------------------------------ |
+| 功能状态   | 必须是`HC_FUNCTION_STATUS_OPERATE_STORAGE` |
+| 命令参数   | 无                                         |
+| 数据块     | 从机发送                                   |
+| 数据块参数 | 无                                         |
+| 数据块内容 | `uint16`：当前闪存颗粒的器件型号           |
 
 ![HC_CMD_AskFlashDeviceID](./image/HC_CMD_AskFlashDeviceID.svg)
 
 <font color='red'>注意：目前程序内的时序与本规定不符，有待修改；另外，`deviceID`最好返回缓存的器件号而不是通过SPI通信读出；</font>
 
-##### 13. 全片擦除
+##### 12. 设置RTC时间
 
-##### 14. 设置RTC时间
+| 命令字   | HC_CMD_SetRealTimeClock（`0x31`） |
+| -------- | --------------------------------- |
+| 命令参数 | `uint32`：UNIX时间戳              |
+| 数据块   | 无                                |
 
-#### ㈢ 功能的实现
+![HC_CMD_SetRealTimeClock](./image/HC_CMD_SetRealTimeClock.svg)
+
+#### ㈣ 功能的实现
 
 ##### 1. 从机状态机复位
 
@@ -156,70 +210,65 @@
 
 串口最后一个字节接收到后一段时间（例如1秒）内没有新的字节送入，即视为传输结束，从状态机复位。如果在等待数据传输，则认为传输错误。并且发送状态机复位码使从机状态机复位。
 
-##### 2. 从机发送文本
+##### 2. 向闪存写入数据
 
-就绪状态，默认把从机输出都作为文本。
-
-##### 10. 向闪存写入数据
-
-1. 进入闪存操作模式
+1. 进入储存器操作模式
 2. 询问闪存是否忙
 3. 在闪存指定地址写入数据
 4. 询问闪存上次写入是否出错
-5. 退出闪存操作模式
+5. 退出储存器操作模式
 
-注意：
+**注意：**
 
-1. 储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
+1. 向闪存写入数据需要在储存器操作模式下进行，否则从机会视为命令错误（错误码为`HC_ErrCode_ModeError`）
 2. 由于缓存有限，最大数据长度暂定为缓存大小4KB
 
-#### ㈣ 注意事项
+##### 3. 射孔参数导入
+
+1. 从机回到就绪状态
+2. 进入储存器操作模式
+3. （擦除配置表所在扇区）
+   1. 指定4K扇区
+   2. 擦除当前4K扇区
+4. 在闪存的参数表、射孔表、接箍表的地址上依次写入数据：
+   1. 询问闪存是否忙
+   2. 在闪存指定地址写入数据
+   3. 询问闪存上次写入是否出错
+5. 退出储存器操作模式
+
+##### 4. 开始／停止采样
+
+1. 从机回到就绪状态
+2. 开始采样
+3. 停止采样
+
+**注意：**
+
+开始采样后，会进入采样模式，在停止采样前不能切换到其他模式。
+
+##### 5. 导出数据
+
+1. 从机回到就绪状态
+2. 进入储存器操作模式
+3. 询问闪存型号
+4. 逐块导出闪存64k块中的内容：
+   1. 指定64K块编号
+   2. 导出当前64K块
+5. 保存传入数据：上位机将传入的数据保存在默认数据目录下，进行命名并返回写入数据的字节数以及文件保存的路径。
+6. 退出储存器操作模式
+
+<font color='red'>注意：上位机程序中并未给出退出储存器操作模式的步骤；</font>
+
+#### ㈤ 注意事项
 
 1. 上位机发送`␅`后，在从机回复`␆`或`␕`前，应当谨慎考虑发送下一个`␅`；
 2. 目前的实现存在以下特点
    - 命令暂存在缓冲中，待执行完成后再读取新的指令；
    - 数据暂存在缓冲中，若不及时读走可能会丢数据；
    - 如果上一次命令未执行完成，则这个时候发送`␅`会回复`␕`+`0x11`（`HC_ErrCode_Busy`），完成握手并报错，但是什么也不执行；
+   - 就绪状态，默认把从机输出都作为文本。
 
-------
-
-<font color='red'>两条横线之间的内容应当删除。</font>
-
-#### 7. 采样开始停止控制
-
-开始采样：cmd=`0x10`
-
-停止采样：cmd=`0x11`
-
-无参数
-
-开始采样后，会进入采样模式，在停止采样前不能切换到其他模式。
-
-#### 8. Flash擦除
-
-先发送`␅`+`0x20`进入储存器操作模式，无参数，从机返回状态标志。
-
-切换块方法见上文。
-
-擦除一个块：发送`␅`+`0x23`，从机返回状态标志。
-
-全片擦除：发送`␅`+`0x2F`，从机返回状态标志。
-
-#### 9. 导出Flash数据
-
-先发送`␅`+`0x20`进入储存器操作模式，无参数，从机返回状态标志。
-
-切换块（64KB）：默认块号是0，发送`␅`+`0x21`、块号（2B），从机返回状态标志。
-
-输出一个块：发送`␅`+`0x22`，从机返回状态标志、`␁`、数据长度减一（2B）、`␂`、数据（典型64KB）、`␃`。
-
-发送`␅`+`␛ (0x1B)`退出导出数据模式，从机返回状态标志。
-
-注意：储存器操作模式的指令要先发送`␅`+`0x20`进入储存器操作模式后才能执行，否则会回复`␕`+`0xa2`（`HC_ErrCode_ModeError`）
-
-------
-
-### 四、从机的通信握手状态机
+### 三、从机的通信握手状态机
 
 ![从机的上位机通信握手状态机](./image/从机的上位机通信握手状态机.svg)
 
