--- a/doc/上位机程序设计和协议.md
+++ b/doc/上位机程序设计和协议.md
@@ -151,7 +151,7 @@
 
 ![HC_CMD_ErasexkBlock](./image/HC_CMD_Erasex.svg)
 
-##### 9. 询问闪存上次写入是否出错／询问闪存是否忙
+##### 9. 询问闪存上次写入是否出错／询问闪存是否忙  <font color='red'>注意：待完善</font>
 
 | 命令字     | HC_CMD_AskLastWriteResult（`0x28`）<br />HC_CMD_AskFlashStatus（`0x29`） |
 | ---------- | ------------------------------------------------------------ |
